--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,5 +3,6 @@
 } */
 
 body {
-  background-image: url('../img/01.jpeg');
+  /* background-image: url('../img/01.jpeg'); */
+  background-color: hotpink;
 }
